--- a/0. README.md
+++ b/0. README.md
@@ -1,5 +1,5 @@
 이 GitHub 저장소에 있는 스크립트는 조선일보에서 1920-1940년의 1. 이미지 크롤링, 2. 딥러닝 미세조정 학습, 3. 네컷만화 탐지, 4. 네컷만화 추출
-과정으로 구성되어 있으며, 각 파일에 해당 스크립트에 대한 설명을 했음.
+과정으로 구성되어 있음.
 
 이미지 파일 출처: 조선일보 뉴스 라이브러리 (https://newslibrary.chosun.com/)
 
